# mcp-nefino

./: README.md  pyproject.toml  requirements.txt
src/: client.py  server.py
src/mcp_nefino/: __init__.py  client.py  server.py
